--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ group = project.maven_group
 base {
 	archivesName = project.archives_base_name
 }
-
+// special halibut
 repositories {
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
