--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=1.21+build.9
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.0.0
+mod_version=1.1.0.0+1.21
 maven_group=eu.raspberrymods.fishlib
 archives_base_name=fish-lib
 
 # Dependencies
-fabric_version=0.100.6+1.21
+fabric_version=0.100.7+1.21
